# pge-jax

./: .gitignore  AGENTS.md  Makefile  README.md  STATUS.md  pyproject.toml
.design/: algo-instrumentation.md  coefficient.md  grow-phase-performance.md  peek-refactor-plan.md  type-safety-audit.md
.sessions/: 001-01.md  002-01.md  003-01.md  004-01.md  005-01.md  006-01.md
hack/: benchmark.py  devices.py  gpu-limit.py  quickstart.py  run-safe.sh
pge_jax/: __init__.py  algebra.py  evaluate.py  expand.py  filters.py  fitness_funcs.py  memoize.py  metrics.py  model.py  optimize.py  search.py  search_model.py  selection.py
tests/: test_coefficient_rewriting.py  test_evaluate.py  test_memoization.py  test_metrics.py  test_model.py  test_optimize.py  test_pipeline_stages.py  test_search.py
