[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pge-jax"
version = "0.1.0"
description = "JAX implementation of the Prioritized Grammar Enumeration algorithm for symbolic regression"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tony Worm", email = "verdverm@gmail.com" },
]
keywords = ["pge", "jax", "symbolic-regression", "genetic-programming", "neural-tensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.13",
    "networkx>=3.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
benchmark = [
    "scikit-learn>=1.4",
    "lmfit>=1.3",
    "pandas>=2.2",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
]

[project.urls]
Repository = "https://github.com/verdverm/pge-jax"

[tool.setuptools.packages.find]
include = ["pge_jax*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "NPY"]
ignore = [
    "E741",  # ambiguous variable names (l, I) — from DEAP port
    "F841",  # unused local variables — sympy/math patterns use these
    "N802",  # function names — DEAP API (selNSGA2, sortLogNondominated, etc.)
    "N803",  # argument names — conventional (X_train, Y_train)
    "N806",  # variable names — sympy/math conventions (B, E, J, N, K)
    "N812",  # import aliases — from pypge (combos_woutR, combos_withR)
    "NPY002", # legacy numpy random — acceptable for now
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
